--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -21,6 +21,8 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="Menu Interaction",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False)
 +ActionMappings=(ActionName="Menu Button",Key=Enter,bShift=False,bCtrl=False,bAlt=False)
 +ActionMappings=(ActionName="Menu Button",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False)
++ActionMappings=(ActionName="ResetHMD",Key=R,bShift=True,bCtrl=False,bAlt=False)
++ActionMappings=(ActionName="ResetHMD",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False)
 +AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveUp",Key=Up,Scale=1.000000)
