--- a/Saved/Config/CleanSourceConfigs/DeviceProfiles.ini
+++ b/Saved/Config/CleanSourceConfigs/DeviceProfiles.ini
@@ -23,6 +23,9 @@ DeviceProfileNameAndTypes=Mac,Mac
 DeviceProfileNameAndTypes=MacNoEditor,MacNoEditor
 DeviceProfileNameAndTypes=MacServer,MacServer
 DeviceProfileNameAndTypes=WinRT,WinRT
+DeviceProfileNameAndTypes=Linux,Linux
+DeviceProfileNameAndTypes=LinuxNoEditor,LinuxNoEditor
+DeviceProfileNameAndTypes=LinuxServer,LinuxServer
 
 [Windows DeviceProfile]
 DeviceType=Windows
@@ -42,6 +45,7 @@ BaseProfileName=
 CVars=r.BloomQuality=0
 CVars=r.DepthOfFieldQuality=0
 CVars=r.LightShaftQuality=0
+CVars=r.RefractionQuality=0
 
 [iPad2 DeviceProfile]
 DeviceType=IOS
@@ -112,6 +116,7 @@ CVars=r.MobileContentScaleFactor=1
 CVars=r.BloomQuality=0
 CVars=r.DepthOfFieldQuality=0
 CVars=r.LightShaftQuality=0
+CVars=r.RefractionQuality=0
 
 [Android_Low DeviceProfile]
 DeviceType=Android
@@ -164,6 +169,7 @@ CVars=r.AmbientOcclusionRadiusScale=2
 [HTML5 DeviceProfile]
 DeviceType=HTML5
 BaseProfileName=
+CVars=r.RefractionQuality=0
 
 [Mac DeviceProfile]
 DeviceType=Mac
@@ -180,4 +186,22 @@ BaseProfileName=Mac
 [WinRT DeviceProfile]
 DeviceType=WinRT
 BaseProfileName=
+
+[Linux DeviceProfile]
+DeviceType=Linux
+BaseProfileName=
+MeshLODSettings=
+TextureLODSettings=
+
+[LinuxNoEditor DeviceProfile]
+DeviceType=LinuxNoEditor
+BaseProfileName=Linux
+MeshLODSettings=
+TextureLODSettings=
+
+[LinuxServer DeviceProfile]
+DeviceType=LinuxServer
+BaseProfileName=Linux
+MeshLODSettings=
+TextureLODSettings=
 
