--- a/Saved/Config/CleanSourceConfigs/Editor.ini
+++ b/Saved/Config/CleanSourceConfigs/Editor.ini
@@ -28,13 +28,22 @@ RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.MaterialFunc
 RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.ParticleSystem",RendererClassName="/Script/UnrealEd.ParticleSystemThumbnailRenderer")
 RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.StaticMesh",RendererClassName="/Script/UnrealEd.StaticMeshThumbnailRenderer")
 RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.SkeletalMesh",RendererClassName="/Script/UnrealEd.SkeletalMeshThumbnailRenderer")
+RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.AnimSequenceBase",RendererClassName="/Script/UnrealEd.AnimSequenceThumbnailRenderer")
+RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.BlendSpaceBase",RendererClassName="/Script/UnrealEd.BlendSpaceThumbnailRenderer")
+RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.AnimBlueprint",RendererClassName="/Script/UnrealEd.AnimBlueprintThumbnailRenderer")
 RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.Level",RendererClassName="/Script/UnrealEd.LevelThumbnailRenderer")
+RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.World",RendererClassName="/Script/UnrealEd.WorldThumbnailRenderer")
 RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.SoundWave",RendererClassName="/Script/UnrealEd.SoundWaveThumbnailRenderer")
 RenderableThumbnailTypes=(ClassNeedingThumbnailName="/Script/Engine.SlateBrushAsset",RendererClassName="/Script/UnrealEd.SlateBrushThumbnailRenderer")
 
 [/Script/UnrealEd.DefaultSizedThumbnailRenderer]
 DefaultSizeX=512
 DefaultSizeY=512
+
+[/Script/UnrealEd.WorldThumbnailRenderer]
+GlobalOrbitYawOffset=0
+bUseUnlitScene=false
+bAllowWorldThumbnails=false
 
 [/Script/UnrealEd.ActorFactory]
 MenuPriority=10
@@ -82,7 +91,9 @@ MenuPriority=11
 MenuPriority=10
 
 [/Script/BlueprintGraph.EdGraphSchema_K2]
-bAllowBlueprintComms=true
+bUseLegacyActionMenus=true
+EditoronlyBPFunctionRedirects=(ClassName="AIBlueprintHelperLibrary", OldFunctionName="SpawnAI", NewFunctionName="SpawnAIFromClass", BlueprintParamName="Pawn", ClassParamName="PawnClass")
+EditoronlyBPFunctionRedirects=(ClassName="GameplayStatics", OldFunctionName="CreateSaveGameObjectFromBlueprint", NewFunctionName="CreateSaveGameObject", BlueprintParamName="SaveGameBlueprint", ClassParamName="SaveGameClass")
 
 [BlueprintEditor.Palette]
 bUseLegacyLayout=false
@@ -199,7 +210,7 @@ ModuleMenu_TypeDataToBaseModuleRejections=(ObjName="ParticleModuleTypeDataBeam2"
 ModuleMenu_TypeDataToBaseModuleRejections=(ObjName="ParticleModuleTypeDataMesh",InvalidObjNames=("ParticleModuleBeamBase","ParticleModuleTrailBase","ParticleModuleVectorFieldBase"))
 ModuleMenu_TypeDataToBaseModuleRejections=(ObjName="ParticleModuleTypeDataRibbon",InvalidObjNames=("ParticleModuleVectorFieldBase","ParticleModuleLightBase"))
 ModuleMenu_TypeDataToBaseModuleRejections=(ObjName="ParticleModuleTypeDataGpu",InvalidObjNames=("ParticleModuleBeamBase","ParticleModuleTrailBase","ParticleModuleCameraBase","ParticleModuleKillBase","ParticleModuleParameterBase","ParticleModuleEventBase","ParticleModuleLightBase"))
-ModuleMenu_TypeDataToSpecificModuleRejections=(ObjName="None",InvalidObjNames=("ParticleModuleCollisionGPU","ParticleModuleSizeScaleBySpeed","ParticleModuleMeshMaterial","ParticleModuleMeshRotation","ParticleModuleMeshRotation_Seeded","ParticleModuleMeshRotationRate","ParticleModuleMeshRotationRate_Seeded","ParticleModuleMeshRotationRateMultiplyLife","ParticleModuleMeshRotationRateOverLife","ParticleModuleTrailSpawnPerUnit", "ParticleModuleAttractorPointGravity"))
+ModuleMenu_TypeDataToSpecificModuleRejections=(ObjName="None",InvalidObjNames=("ParticleModuleCollisionGPU","ParticleModuleMeshMaterial","ParticleModuleMeshRotation","ParticleModuleMeshRotation_Seeded","ParticleModuleMeshRotationRate","ParticleModuleMeshRotationRate_Seeded","ParticleModuleMeshRotationRateMultiplyLife","ParticleModuleMeshRotationRateOverLife","ParticleModuleTrailSpawnPerUnit", "ParticleModuleAttractorPointGravity"))
 ModuleMenu_TypeDataToSpecificModuleRejections=(ObjName="ParticleModuleTypeDataBeam2",InvalidObjNames=("ParticleModuleSizeScaleBySpeed","ParticleModuleMeshMaterial","ParticleModuleMeshRotation","ParticleModuleMeshRotation_Seeded","ParticleModuleMeshRotationRate","ParticleModuleMeshRotationRate_Seeded","ParticleModuleMeshRotationRateMultiplyLife","ParticleModuleMeshRotationRateOverLife","ParticleModuleTrailSpawnPerUnit","ParticleModuleAccelerationDrag"))
 ModuleMenu_TypeDataToSpecificModuleRejections=(ObjName="ParticleModuleTypeDataRibbon",InvalidObjNames=("ParticleModuleSizeScaleBySpeed","ParticleModuleMeshMaterial","ParticleModuleMeshRotation","ParticleModuleMeshRotation_Seeded","ParticleModuleMeshRotationRate","ParticleModuleMeshRotationRate_Seeded","ParticleModuleMeshRotationRateMultiplyLife","ParticleModuleMeshRotationRateOverLife","ParticleModuleLocationEmitterDirect" ))
 ModuleMenu_TypeDataToSpecificModuleRejections=(ObjName="ParticleModuleTypeDataGpu",InvalidObjNames=("ParticleModuleCollision","ParticleModuleAttractorPoint","ParticleModuleAttractorLine","ParticleModuleAttractorParticle","ParticleModuleAcceleration","ParticleModuleAccelerationOverLifetime","ParticleModuleLocationEmitterDirect","ParticleModuleLocationDirect","ParticleModuleVelocityOverLifetime","ParticleModuleSubUVMovie","ParticleModuleRotationRateMultiplyLife","ParticleModuleRotationOverLifetime","ParticleModuleSourceMovement","ParticleModuleEventGenerator","ParticleModuleMeshMaterial","ParticleModuleMeshRotation","ParticleModuleMeshRotation_Seeded","ParticleModuleMeshRotationRate","ParticleModuleMeshRotationRate_Seeded","ParticleModuleMeshRotationRateMultiplyLife","ParticleModuleMeshRotationRateOverLife","ParticleModuleTrailSpawnPerUnit"))
@@ -237,6 +248,7 @@ SupportWebsiteURL="http://unrealengine.com/support"
 
 [UserDefinedStructure]
 bUseUserDefinedStructure=true
+bShowDefaultValuePropertyEditor=true
 
 [EpicSurvey]
 Source=CDN
@@ -245,7 +257,7 @@ EngineContentRelativeDirectory=Editor/EpicSurvey/{Culture}/
 NotificationDelayTime=600
 NotificationDuration=10
 PulseTimeInterval=10
-PulseDuration=5
+PulseDuration=6
 
 [CustomBlueprintFunctionLibrary]
 bCanCreateNew=true
