--- a/Saved/Config/CleanSourceConfigs/EditorGameAgnostic.ini
+++ b/Saved/Config/CleanSourceConfigs/EditorGameAgnostic.ini
@@ -7,3 +7,13 @@ Source=NEWSFEED_Cdn
 MaxItemsToShow=10
 ShowOnlyUnreadItems=True
 
+[/Script/EditorLiveStreaming.EditorLiveStreamingSettings]
+FrameRate=30
+ScreenScaling=0.75
+bPrimaryMonitorOnly=true
+bEnableWebCam=true
+WebCamResolution=Normal_640x480
+bMirrorWebCamImage=false
+bCaptureAudioFromComputer=true
+bCaptureAudioFromMicrophone=true
+
