--- a/Saved/Config/CleanSourceConfigs/EditorUserSettings.ini
+++ b/Saved/Config/CleanSourceConfigs/EditorUserSettings.ini
@@ -4,10 +4,9 @@ bEnableEditorUtilityBlueprints=false
 bSuppressFullyLoadPrompt=True
 bAllowSelectTranslucent=True
 bUpdateActorsInGridLevelsImmediately=False
-bDisplayActorCountInLevelBrowser=True
 bDisplayMemorySizeDataInLevelBrowser=False
-bDisplayPathsInLevelBrowser=False
 bShowFrameRateAndMemory=False
+bThrottleWhenNotForeground=False
 bAutoReimportAnimSets=False
 PropertyMatrix_NumberOfPasteOperationsBeforeWarning=20
 bSCSEditorShowGrid=true
@@ -15,9 +14,6 @@ HoverHighlightIntensity=0.000000
 bDisplayUIExtensionPoints=False
 bUseCurvesForDistributions=False
 bAutoloadCheckedOutPackages=False
-bDisplayLightmassSizeInLevelBrowser=False
-bDisplayFileSizeInLevelBrowser=False
-bDisplayEditorOffsetInLevelBrowser=False
 
 [/Script/EditorStyle.EditorStyleSettings]
 ColorVisionDeficiencyType=CVD_NormalVision
@@ -29,6 +25,13 @@ bUseSmallToolBarIcons=False
 bEnableWindowAnimations=False
 bShowFriendlyNames=True
 bExpandConfigurationMenus=False
+
+[/Script/Levels.LevelBrowserSettings]
+bDisplayActorCount=True
+bDisplayLightmassSize=False
+bDisplayFileSize=False
+bDisplayPaths=False
+bDisplayEditorOffset=False
 
 [/Script/SceneOutliner.SceneOutlinerSettings]
 bHideTemporaryActors=False
@@ -61,6 +64,7 @@ bBehaviorTreeEditor=False
 bLoadDefaultLevelAtStartup=True
 bAutoReimportTextures=False
 bAutoReimportCSV=False
+bDirtyMigratedBlueprints=False
 bAutoSaveEnable=True
 bAutoSaveMaps=True
 bAutoSaveContent=True
@@ -79,6 +83,7 @@ bAllowBackgroundAudio=False
 bEnableRealTimeAudio=False
 EditorVolumeLevel=1.0
 bEnableEditorSounds=True
+DefaultLevelStreamingClass=Class'/Script/Engine.LevelStreamingKismet'
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 PlayFromHerePlayerStartClassName=/Script/Engine.PlayerStartPIE
@@ -239,6 +244,7 @@ bHideUnusedConnectors=False
 bRealtimeMaterialViewport=True
 bRealtimeExpressionViewport=False
 bAlwaysRefreshAllPreviews=False
+bLivePreviewUpdate=True
 
 [UnEdViewport]
 InterpEdPanInvert=False
@@ -313,7 +319,7 @@ GridSize=25
 ViewModeType=2
 ViewportBackgroundColor=(R=0.04,G=0.04,B=0.04)
 ViewFOV=53.43
-bShowMeshStats=true
+ShowMeshStats=1
 
 [UnrealEd.UIEditorOptions]
 WindowPosition=(X=256,Y=256,Width=1024,Height=768)
@@ -383,6 +389,7 @@ bAutoCreateGroups=True
 bInvertNormalMaps=False
 bImportTextures=False
 bOverrideFullName=True
+bConvertScene=True
 bRemoveNamespaces=True
 bImportAnimations=False
 bResampleAnimations=False
@@ -459,6 +466,7 @@ UnpaintDensity=0.000000
 bFilterLandscape=True
 bFilterStaticMesh=True
 bFilterBSP=True
+bFilterTranslucent=False
 
 [MeshPaintEdit]
 DefaultBrushRadius=128
