--- a/Saved/Config/CleanSourceConfigs/Game.ini
+++ b/Saved/Config/CleanSourceConfigs/Game.ini
@@ -1,5 +1,5 @@
 [Internationalization]
-LocalizationPaths=../../../Templates/TP_VRSpaceShooter/Content/Localization/Game
+LocalizationPaths=F:/Unreal/GitHub/TP_SpaceShooterVR/Content/Localization/Game
 
 [/Script/Engine.GameMode]
 
