--- a/Saved/Config/CleanSourceConfigs/Input.ini
+++ b/Saved/Config/CleanSourceConfigs/Input.ini
@@ -5,6 +5,7 @@ FOVScale=0.01111
 DoubleClickTime=0.2f
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 bAlwaysShowTouchInterface=false
+bShowConsoleOnFourFingerTap=true
 ConsoleKey=Tilde
 bRequireCtrlToNavigateAutoComplete=False
 AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -22,6 +23,8 @@ ActionMappings=(ActionName="Menu Interaction",Key=LeftMouseButton,bShift=False,b
 ActionMappings=(ActionName="Menu Interaction",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False)
 ActionMappings=(ActionName="Menu Button",Key=Enter,bShift=False,bCtrl=False,bAlt=False)
 ActionMappings=(ActionName="Menu Button",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False)
+ActionMappings=(ActionName="ResetHMD",Key=R,bShift=True,bCtrl=False,bAlt=False)
+ActionMappings=(ActionName="ResetHMD",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False)
 AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
 AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
 AxisMappings=(AxisName="MoveUp",Key=Up,Scale=1.000000)
@@ -65,10 +68,13 @@ DebugExecBindings=(Key=Escape,Command="CloseEditorViewport")
 DebugExecBindings=(Key=Enter,Command="TOGGLE_FULLSCREEN",Alt=True)
 DebugExecBindings=(Key=Tab,Command="FocusNextPIEWindow",Control=True)
 DebugExecBindings=(Key=Tab,Command="FocusLastPIEWindow",Control=True,Shift=True)
+DebugExecBindings=(Key=Quote,Command="cheat EnableGDT",Control=False,Shift=False)
 
 [/Script/Engine.Console]
-MaxScrollbackSize=1024
 HistoryBot=-1
+
+[/Script/EngineSettings.ConsoleSettings]
+MaxScrollbackSize=1024
 AutoCompleteMapPaths=Content/Maps
 ManualAutoCompleteList=(Command="Exit",Desc="Exit (Exits the game)")
 ManualAutoCompleteList=(Command="DebugCreatePlayer 1",Desc=)
@@ -106,6 +112,7 @@ ManualAutoCompleteList=(Command="Show TERRAIN",Desc="Show TERRAIN (Toggles terra
 ManualAutoCompleteList=(Command="Show SPLINES",Desc="Show SPLINES (Toggles spline rendering)")
 ManualAutoCompleteList=(Command="Stat FPS",Desc="Stat FPS (Shows FPS counter)")
 ManualAutoCompleteList=(Command="Stat UNIT",Desc="Stat UNIT (Shows hardware unit framerate)")
+ManualAutoCompleteList=(Command="Stat UnitGraph",Desc="Stat UnitGraph (Draws simple unit time graph)")
 ManualAutoCompleteList=(Command="Stat DUMPHITCHES",Desc="Stat DumpHitches (executes dumpstats on hitches - see log)")
 ManualAutoCompleteList=(Command="Stat D3D11RHI",Desc="Stat D3D11RHI (Shows Direct3D 11 stats)")
 ManualAutoCompleteList=(Command="Stat LEVELS",Desc="Stat LEVELS (Displays level streaming info)")
