--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -1,1 +1,213 @@
+[EditorLayouts]
+NullLayout=(\
+	"Type": "Layout",\
+	"Name": "NullLayout",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Horizontal",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": []\
+		)\
+	]\
+)
+Standalone_BlueprintEditor_Layout_v5=(\
+	"Type": "Layout",\
+	"Name": "Standalone_BlueprintEditor_Layout_v5",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Vertical",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 0.186721,\
+					"Type": "Stack",\
+					"HideTabWell": true,\
+					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
+					"Tabs": [\
+						(\
+							"TabId": "AssetEditorToolkit_Toolbar",\
+							"TabState": "OpenedTab"\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Splitter",\
+					"Orientation": "Orient_Horizontal",\
+					"Nodes": [\
+						(\
+							"SizeCoefficient": 0.268884,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.65887,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "MyBlueprint",\
+									"Tabs": [\
+										(\
+											"TabId": "MyBlueprint",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.341129,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "Inspector",\
+									"Tabs": [\
+										(\
+											"TabId": "Inspector",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.581114,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.8,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "Document : 3",\
+									"Tabs": [\
+										(\
+											"TabId": "Document",\
+											"TabState": "ClosedTab"\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.2,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "CompilerResults",\
+									"Tabs": [\
+										(\
+											"TabId": "CompilerResults",\
+											"TabState": "OpenedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
+										)\
+									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.15,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "PaletteList",\
+							"Tabs": [\
+								(\
+									"TabId": "PaletteList",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						)\
+					]\
+				)\
+			]\
+		)\
+	]\
+)
+Standalone_BlueprintComponents_Layout_v5=(\
+	"Type": "Layout",\
+	"Name": "Standalone_BlueprintComponents_Layout_v5",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Vertical",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 0.2,\
+					"Type": "Stack",\
+					"HideTabWell": true,\
+					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
+					"Tabs": [\
+						(\
+							"TabId": "AssetEditorToolkit_Toolbar",\
+							"TabState": "OpenedTab"\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Splitter",\
+					"Orientation": "Orient_Horizontal",\
+					"Nodes": [\
+						(\
+							"SizeCoefficient": 0.384041,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.35,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "ConstructionScriptEditor",\
+									"Tabs": [\
+										(\
+											"TabId": "ConstructionScriptEditor",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.65,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "Inspector",\
+									"Tabs": [\
+										(\
+											"TabId": "Inspector",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.615959,\
+							"Type": "Stack",\
+							"HideTabWell": true,\
+							"ForegroundTab": "SCSViewport",\
+							"Tabs": [\
+								(\
+									"TabId": "SCSViewport",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						)\
+					]\
+				)\
+			]\
+		)\
+	]\
+)
+Standalone_BlueprintDefaults_Layout_v4=( 	"Type": "Layout", 	"Name": "Standalone_BlueprintDefaults_Layout_v4", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.2, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "DefaultEditor", 					"Tabs": [ 						( 							"TabId": "DefaultEditor", 							"TabState": "OpenedTab" 						) 					] 				) 			] 		) 	] )
+Persona_AnimBlueprintEditMode_Layout_v6=( 	"Type": "Layout", 	"Name": "Persona_AnimBlueprintEditMode_Layout_v6", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.186721, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 0.25, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.5, 									"Type": "Stack", 									"HideTabWell": true, 									"ForegroundTab": "Viewport", 									"Tabs": [ 										( 											"TabId": "Viewport", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.5, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "AnimBlueprintDefaultsEditor", 									"Tabs": [ 										( 											"TabId": "AnimBlueprintDefaultsEditor", 											"TabState": "OpenedTab" 										), 										( 											"TabId": "AnimBlueprintParentPlayerEditor", 											"TabState": "ClosedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 0.75, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.7, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "Document : 3", 									"Tabs": [ 										( 											"TabId": "Document", 											"TabState": "ClosedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.3, 									"Type": "Splitter", 									"Orientation": "Orient_Horizontal", 									"Nodes": [ 										( 											"SizeCoefficient": 0.5, 											"Type": "Stack", 											"HideTabWell": false, 											"ForegroundTab": "MyBlueprint", 											"Tabs": [ 												( 													"TabId": "SequenceBrowser", 													"TabState": "OpenedTab" 												), 												( 													"TabId": "MyBlueprint", 													"TabState": "OpenedTab" 												), 												( 													"TabId": "SkeletonTreeView", 													"TabState": "ClosedTab" 												) 											] 										), 										( 											"SizeCoefficient": 0.5, 											"Type": "Stack", 											"HideTabWell": true, 											"ForegroundTab": "Inspector", 											"Tabs": [ 												( 													"TabId": "Inspector", 													"TabState": "OpenedTab" 												) 											] 										) 									] 								), 								( 									"SizeCoefficient": 0.2, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "None", 									"Tabs": [ 										( 											"TabId": "CompilerResults", 											"TabState": "ClosedTab" 										), 										( 											"TabId": "FindResults", 											"TabState": "ClosedTab" 										) 									] 								) 							] 						) 					] 				) 			] 		) 	] )
+Persona_SkeletonEditMode_Layout_v2=( 	"Type": "Layout", 	"Name": "Persona_SkeletonEditMode_Layout_v2", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.186721, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 1, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "SkeletonTreeView", 							"Tabs": [ 								( 									"TabId": "SkeletonTreeView", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.75, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "Viewport", 							"Tabs": [ 								( 									"TabId": "Viewport", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 1, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "Inspector", 									"Tabs": [ 										( 											"TabId": "Inspector", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "SequenceBrowser", 									"Tabs": [ 										( 											"TabId": "SequenceBrowser", 											"TabState": "OpenedTab" 										) 									] 								) 							] 						) 					] 				) 			] 		) 	] )
+Persona_AnimEditMode_Layout_v6=( 	"Type": "Layout", 	"Name": "Persona_AnimEditMode_Layout_v6", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.186721, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 1, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "SkeletonTreeView", 									"Tabs": [ 										( 											"TabId": "SkeletonTreeView", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "AnimAssetPropertiesTab", 									"Tabs": [ 										( 											"TabId": "AnimAssetPropertiesTab", 											"TabState": "OpenedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 1, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.75, 									"Type": "Stack", 									"HideTabWell": true, 									"ForegroundTab": "Viewport", 									"Tabs": [ 										( 											"TabId": "Viewport", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.25, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "None", 									"Tabs": [ 										( 											"TabId": "Document", 											"TabState": "ClosedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 1, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "Inspector", 									"Tabs": [ 										( 											"TabId": "Inspector", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "SequenceBrowser", 									"Tabs": [ 										( 											"TabId": "SequenceBrowser", 											"TabState": "OpenedTab" 										) 									] 								) 							] 						) 					] 				) 			] 		) 	] )
+
+[/Script/UnrealEd.UnrealEdOptions]
+bExpandCustomClassPickerClassList=True
+
 
