--- a/Saved/Config/CleanSourceConfigs/Input.ini
+++ b/Saved/Config/CleanSourceConfigs/Input.ini
@@ -8,6 +8,12 @@ bAlwaysShowTouchInterface=false
 bShowConsoleOnFourFingerTap=true
 ConsoleKey=Tilde
 bRequireCtrlToNavigateAutoComplete=False
+AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
+AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -15,16 +21,16 @@ AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.250000,Sensi
 AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 bUseMouseForTouch=False
-ActionMappings=(ActionName="PrimaryFire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="PrimaryFire",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="SecondaryFire",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="SecondaryFire",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="Menu Interaction",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="Menu Interaction",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="Menu Button",Key=Enter,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="Menu Button",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="ResetHMD",Key=R,bShift=True,bCtrl=False,bAlt=False)
-ActionMappings=(ActionName="ResetHMD",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False)
+ActionMappings=(ActionName="PrimaryFire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="PrimaryFire",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="SecondaryFire",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="SecondaryFire",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="Menu Interaction",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="Menu Interaction",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="Menu Button",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="Menu Button",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="ResetHMD",Key=R,bShift=True,bCtrl=False,bAlt=False,bCmd=False)
+ActionMappings=(ActionName="ResetHMD",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
 AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
 AxisMappings=(AxisName="MoveUp",Key=Up,Scale=1.000000)
