--- a/Saved/Config/Windows/EditorLayout.ini
+++ b/Saved/Config/Windows/EditorLayout.ini
@@ -68,7 +68,7 @@ Standalone_BlueprintEditor_Layout_v5=(\
 									"SizeCoefficient": 0.8,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 5",\
+									"ForegroundTab": "Document : 2",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -236,7 +236,7 @@ LevelEditor_Layout_v1.1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.606668,\
+					"SizeCoefficient": 0.567535,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Vertical",\
 					"Nodes": [\
@@ -279,7 +279,7 @@ LevelEditor_Layout_v1.1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.0931373,\
+					"SizeCoefficient": 0.13227,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Vertical",\
 					"Nodes": [\
@@ -397,7 +397,7 @@ Persona_AnimBlueprintEditMode_Layout_v6=(\
 									"SizeCoefficient": 0.538506,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 1",\
+									"ForegroundTab": "Document : 0",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -503,31 +503,6 @@ UnrealEd_Layout_v1.3=(\
 			"SizeCoefficient": 1,\
 			"Type": "Area",\
 			"Orientation": "Orient_Horizontal",\
-			"WindowPlacement": "Placement_Specified",\
-			"WindowPosition_X": 2731,\
-			"WindowPosition_Y": 126,\
-			"WindowSize_X": 1646,\
-			"WindowSize_Y": 891,\
-			"bIsMaximized": true,\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "StandaloneToolkit : 1",\
-					"Tabs": [\
-						(\
-							"TabId": "StandaloneToolkit",\
-							"TabState": "ClosedTab"\
-						)\
-					]\
-				)\
-			]\
-		),\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Horizontal",\
 			"WindowPlacement": "Placement_Automatic",\
 			"WindowSize_X": 1664,\
 			"WindowSize_Y": 910,\
@@ -590,6 +565,31 @@ UnrealEd_Layout_v1.3=(\
 					"Tabs": [\
 						(\
 							"TabId": "ProjectSettings",\
+							"TabState": "ClosedTab"\
+						)\
+					]\
+				)\
+			]\
+		),\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Horizontal",\
+			"WindowPlacement": "Placement_Specified",\
+			"WindowPosition_X": 447,\
+			"WindowPosition_Y": 470,\
+			"WindowSize_X": 1628,\
+			"WindowSize_Y": 873,\
+			"bIsMaximized": true,\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "None",\
+					"Tabs": [\
+						(\
+							"TabId": "StandaloneToolkit",\
 							"TabState": "ClosedTab"\
 						)\
 					]\
